--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
     <script src="https://unpkg.com/systemjs@0.19.39/dist/system.src.js"></script>
 
     <!-- This SystemJS configuration loads umd packages from the web -->
-    <script src="dawnsdoodles/src/systemjs.config.server.js"></script>
-    <script>System.import('dawnsdoodles/src/main.js').catch(function(err){ console.error(err); });</script>
+    <script src="./systemjs.config.server.js"></script>
+    <script>System.import('./main.js').catch(function(err){ console.error(err); });</script>
   </head>
   <body>
     <p></p>
